# rust-samples

./: .gitignore  README.md
actix_todo/: Cargo.toml  README.md  log4rs.yaml  my.ini
actix_todo/migrations/: 20250225054552_create_todos_table.sql
actix_todo/src/: main.rs
actix_todo/src/application/: mod.rs  todo_service.rs
actix_todo/src/domain/: todo.rs
actix_todo/src/infrastructure/: db.rs
actix_todo/src/interfaces/: mod.rs  todo_handler.rs
actix_todo/web/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json
actix_todo/web/src/: App.tsx  global.css  global.d.ts  main.tsx
actix_todo/web/src/common/data-source/todo/: controller.ts  typings.d.ts
actix_todo/web/src/common/domains/todo-domain/: todoService.ts
actix_todo/web/src/common/domains/todo-domain/entities/: todo.ts
actix_todo/web/src/common/util/: index.ts  request.ts
actix_todo/web/src/components/ui/: card.tsx
actix_todo/web/src/pages/todos/: a.tsx  context.tsx  index.css  index.tsx  utils.ts
actix_todo/web/src/pages/todos/components/: Draggable.tsx  Droppable.tsx  Editor.tsx  Header.tsx  TodoItem.tsx  index.ts
axum_graphql/: Cargo.toml
axum_graphql/src/: main.rs
axum_live/: Cargo.toml  README.md
axum_live/examples/: basic.rs
axum_live/static/: index.css  index.html
axum_todo/: .env  Cargo.toml
axum_todo/src/: config.rs  error.rs  handler.rs  main.rs
axum_websockets/: Cargo.toml
axum_websockets/assets/: script.js
axum_websockets/src/: main.rs
axum_ws_live/: Cargo.toml
axum_ws_live/src/: lib.rs  main.rs  msg.rs
bevy-snake/: Cargo.toml  README.md
bevy-snake/src/: main.rs  main1.rs
by-example/: .gitignore  01-2-1_debug  01-2-1_debug.rs  01-2-2_display.rs  01-2-3_testcase-list.rs  01-2-4_formatting.rs  01-2_formatted-print  01-2_formatted-print.rs  01_hello  01_hello.rs  03-1_structures.rs  03-2_enums.rs  03-3_constants.rs  04-2_scope_and_shadowing.rs  04-4_freezing.rs  05-1_casting.rs  05-2_literals.rs  05-3_inference.rs  06-3_to-and-from-strings.rs  07_expressions.rs  08-2-1_nesting-and-labels.rs  08-2-2_returning-from-loops.rs  08-2_loop.rs  08-3_while.rs  08-4_for-ant-range.rs  08-5-1-2_arryas-slices.rs  08-5-1-3_enums.rs  08-5-1-4_pointers-ref.rs  08-5-2_guards.rs  08-5-3_binding.rs  08-6_if-let.rs  08-7_while-let.rs  09-1_methods.rs  09-2-4_input-functions.rs  09-2-5_as-output-parameters.rs  09-2-6-1_iterator-any.rs  09-3_higher-order-functions.rs  09-4_diverging-functions.rs  10-1_visibility.rs  20-4-1_open  (+1 more)
by-example/02/: 02-1_literals-and-operators.rs  02-2_tuples.rs  02-3_arrays-and-slices.rs  02_primitives.rs
by-example/03/: 03-2-1_use.rs  03-2-2_c-like.rs  03-2-3_testcase-linked-list.rs
by-example/04/: 04-1_mutability.rs  04-3_declare_first.rs  04_variable-bindings.rs
by-example/05/: 05-4_aliasing.rs
by-example/06/: 06-1_from-and-into.rs  06-2_tryfrom-and-tryinto.rs
by-example/08/: 08-1_if-else.rs  08-5-1-1_tuples.rs  08-5-1-5_structs.rs  08-5_match.rs
by-example/09/: 09-2-1_capturing.rs  09-2-2_as-input-parameters.rs  09-2-3_type-anonymity.rs  09-2-6-2_iterator-find.rs  09-2_closures.rs  09_functions.rs
by-example/10/: 10-2_struct-declaration.rs  10-3_the-use-declaration.rs  10-4_super-and-self.rs
by-example/11/: 11-1_creating-a-library.rs  11-2_using-a-library.rs
by-example/13/: 13-3_cfg.rs
by-example/14/: 14-1_functions.rs  14-2_implementation.rs  14-3_traits.rs  14-4-1_testcase-empty-bounds.rs  14-4_bounds.rs  14-5_multiple-bounds.rs  14-6_where-clauses.rs  14-7_new-type-idiom.rs  14-8-1_the-problem.rs  14-8-2_associated-types.rs  14-9-1_testcase-unit-clarification.rs  14-9_phantom-type-parameters.rs  14_generics.rs
code-counter/: Cargo.toml  README.md  TODO.md  code-counter
ddd_example/: Cargo.toml
gen_locale/: Cargo.toml  README.md  file.xlsx
my-proj-clean/: Cargo.toml  README.md
my-proj-clean/src/: app.rs  common.rs  config.rs  fs.rs  lib.rs  main.rs
my-tui/: Cargo.toml
my_blog_os/: Cargo.toml  READMD.md
my_blog_os/.cargo/: config
my_blog_os/src/: main.rs  vga_buffer.rs
my_brev_game/: Cargo.toml
napi-3/: Cargo.toml  abc.mjs  index.d.ts  index.js  package.json
oss/: .gitignore  Cargo.toml  README.md  rustfmt.toml
oss/example/: .env1  run.sh
oss/sdk/: Cargo.toml  README.md
oss/sdk/src/: auth.rs  entity.rs  macros.rs  metadata.rs  oss.rs  request.rs  url.rs  util.rs
oss/sdk/src/async_impl/: object.rs
oss/sdk/src/blocking/: object.rs
oss/src/: cli.rs  lib.rs  main.rs  main1.rs
rustlings/: Cargo.toml
terminal_todo/: Cargo.toml
(+186 files in other folders)
