[package]
name = "actix_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["openssl"] }
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
log4rs = "1.3.0"
openssl = "0.10.70"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
  "mysql",
  "runtime-tokio-native-tls",
  "time",
] }
