[package]
name = "axum_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
config = "0.13.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }