[package]
name = "axum_websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws", "headers"]}
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.3", features = ["fs", "trace"]}
headers = "0.3"