[package]
name = "my-proj-clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
jwalk = "0.6.0"
tui = "0.17.0"
crossterm = "0.23.0"
clap = "3.1.6"
regex = { version = "1.5.5", features = ["std"], default-features = false }