[package]
name = "my_blog_os"
version = "0.1.0"

# 使用`cargo build`编译时需要的配置
[profile.dev]
# panic = "abort" # 禁用 panic 时栈展开

# 使用`cargo build --release`编译时需要的配置
[profile.release]
# panic = "abort" # 禁用 panic 时栈展开

[package.metadata.bootimage]
build-command = ["xbuild"]

[dependencies]
bootloader = "0.9.8"
