[package]
name = "oss"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["sdk"]

[dependencies]
sdk = { path = "./sdk", features = ["debug-print"] }
dotenvy = "0.15"
tokio = { version = "1.15", features = ["full"] }
clap = { version = "4.5.20", features = ["derive", "cargo"] }
glob = "0.3.1"
walkdir = "2.5.0"
mime_guess = "2.0.5"
futures = "0.3.31"
