[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
hmac = "0.12.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
urlencoding = "2.1.3"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
thiserror = "1.0.30"
[features]
default = []
blocking = ["reqwest/blocking"]
debug-print = ["tracing", "tracing-subscriber"]
[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15"
tokio = { version = "1.40.0", features = ["full"] }
